--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 /* Write all remaining styles here */
-.zetsy{
+.zetsy a{
 	font-size: 60px;
 	color: rgb(152,173,166);
 	text-decoration: none;
