Automatically backed up by Learn

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,8 @@ body {
 /* Write all remaining styles here */
 .zetsy a{
 	font-size: 60px;
-	color: rgb(152,173,166);
 	text-decoration: none;
+}
+.color{
+	color: rgb(152,173,166);
 }
